--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,5 @@ psycopg2==2.8.2
 django-mptt==0.10.0
 Pillow==6.0.0
 aliyun-python-sdk-core-v3==2.13.3
+weixin-python==0.5.5
+python-alipay-sdk==1.9.1
