--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -11,6 +11,7 @@ services:
       DJANGO_RUN_ENV: DEV_DOCKER
     depends_on:
       - db
+      - redis
 
   db:
     image: postgres:11.3
@@ -20,3 +21,7 @@ services:
       POSTGRES_USER: building_user
       POSTGRES_DB: building_knowledge_stack_db
 
+  redis:
+    image: redis:5.0
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
