--- a/gunicorn.ini
+++ b/gunicorn.ini
@@ -17,5 +17,8 @@ max_requests = 1000
 timeout = 60
 keepalive = 5
 
-errorlog = "logs/gunicorn.log"
+errorlog = "logs/error.log"
+accesslog = "logs/access.log"
 loglevel = "info"
+
+access_log_format = '%(h)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"'
